feature: indexDataService 타입 수정