@@ -10,8 +10,6 @@ import com.findex.demo.indexData.datas.repository.IndexDataRepository;
 import com.findex.demo.indexData.datas.repository.IndexInfoRepository;
 import com.findex.demo.indexData.index.domain.entity.IndexData;
 import com.findex.demo.indexInfo.domain.entity.IndexInfo;
-import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Comparator;
@@ -46,8 +44,8 @@ public class IndexDataService {
 
         // indexData를 차트 데이터로 변경 (날짜 + 종가)
         List<DataPoint> dataPoints = indexDataList.stream()
-            .map(indexData -> new DataPoint(indexData.getDate(),
-                indexData.getClosePrice().doubleValue())).toList();
+            .map(indexData -> new DataPoint(indexData.getBaseDate(),
+                indexData.getClosePrice())).toList();
 
         // 이동 평균선 만들기.
         List<DataPoint> ma5DataPoints = calculateMovingAverage(dataPoints, 5);
@@ -90,11 +88,11 @@ public class IndexDataService {
             indexInfoList, startDate, endDate);
 
         Map<Integer, IndexData> startDateMap = indexDataList.stream()
-            .filter(data -> data.getDate().equals(startDate))
+            .filter(data -> data.getBaseDate().equals(startDate))
             .collect(Collectors.toMap(data -> data.getIndexInfo().getId(), Function.identity()));
 
         Map<Integer, IndexData> endDateMap = indexDataList.stream()
-            .filter(data -> data.getDate().equals(endDate))
+            .filter(data -> data.getBaseDate().equals(endDate))
             .collect(Collectors.toMap(data -> data.getIndexInfo().getId(), Function.identity()));
 
         // 성과 계산 및 DTO 생성
@@ -108,20 +106,17 @@ public class IndexDataService {
                 IndexData startData = startDateMap.get(id);
                 IndexData endData = endDateMap.get(id);
 
-                BigDecimal startPrice = startData.getClosePrice();
-                BigDecimal endPrice = endData.getClosePrice();
+                Double startPrice = startData.getClosePrice();
+                Double endPrice = endData.getClosePrice();
 
                 // 등락률 계산 (%)
                 double fluctuationRate = 0;
-                if (startPrice.compareTo(BigDecimal.ZERO) != 0) {
-                    fluctuationRate = endPrice.subtract(startPrice)
-                        .divide(startPrice, 4, RoundingMode.HALF_UP)
-                        .multiply(BigDecimal.valueOf(100))
-                        .doubleValue();
+                if (startPrice.compareTo(0.0) != 0) {
+                    fluctuationRate = (endPrice - startPrice) / startPrice * 100;
                 }
 
                 // 등락폭 계산
-                double versus = endPrice.subtract(startPrice).doubleValue();
+                double versus = endPrice - startPrice;
 
                 IndexPerformanceDto dto = new IndexPerformanceDto(
                     id,
@@ -129,8 +124,8 @@ public class IndexDataService {
                     indexInfo.getIndexName(),
                     versus,
                     fluctuationRate,
-                    endPrice.doubleValue(),
-                    startPrice.doubleValue()
+                    endPrice,
+                    startPrice
                 );
 
                 performanceList.add(dto);
@@ -144,7 +139,7 @@ public class IndexDataService {
         // 상위 limit개만 선택
         List<IndexPerformanceDto> topPerformances = performanceList.stream()
             .limit(limit)
-            .collect(Collectors.toList());
+            .toList();
 
         // RankedIndexPerformanceDto 생성 및 순위 부여
         List<RankedIndexPerformanceDto> result = new ArrayList<>();
@@ -195,12 +190,12 @@ public class IndexDataService {
         }
 
         Map<Integer, IndexData> startDateMap = indexDataList.stream()
-            .filter(data -> data.getDate().equals(startDate))
+            .filter(data -> data.getBaseDate().equals(startDate))
             .collect(Collectors.toMap(data -> data.getIndexInfo().getId(),
                 Function.identity()));
 
         Map<Integer, IndexData> endDateMap = indexDataList.stream()
-            .filter(data -> data.getDate().equals(endDate))
+            .filter(data -> data.getBaseDate().equals(endDate))
             .collect(Collectors.toMap(data -> data.getIndexInfo().getId(), Function.identity()));
 
         return favoriteIndexes.stream()
@@ -223,7 +218,7 @@ public class IndexDataService {
             double average = sum / period;
 
             DataPoint maPoint = new DataPoint(
-                dataPoints.get(cnt_i).getData(), average
+                dataPoints.get(cnt_i).getDate(), average
             );
 
             maLine.add(maPoint);
@@ -250,8 +245,8 @@ public class IndexDataService {
         IndexData endData = currentDataMap.get(indexInfo.getId());
 
         if (startData != null && endData != null) {
-            double beforePrice = startData.getClosePrice().doubleValue();
-            double currentPrice = endData.getClosePrice().doubleValue();
+            double beforePrice = startData.getClosePrice();
+            double currentPrice = endData.getClosePrice();
             double versus = currentPrice - beforePrice;
             double fluctuationRate = (versus / beforePrice) * 100.0;
 
